--- a/index.html
+++ b/index.html
@@ -48,17 +48,14 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="https://use.typekit.net/skn8ash.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"
+      href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css"
     />
     <link rel="stylesheet" href="./dist/css/comm.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
     <script defer src="./dist/js/comm.js"></script>
   </head>
   <body>
@@ -118,17 +115,47 @@
         </div>
       </header> -->
       <!-- <section> -->
-      <div class="slide-wrap slide-name">
-        <div class="main-video">
-          <video width="1920" autoplay muted loop>
-            <source src="./images/video/video (1080p).mp4" type="video/mp4" />
-          </video>
-        </div>
-      </div>
+
       <!-- </section> -->
       <main id="main" class="container">
         <div class="pin-cont">
-          <section id="sectionPin">
+          <div class="slide-wrap slide-name">
+            <div class="main-video">
+              <video width="1920" autoplay muted loop>
+                <source
+                  src="./images/video/pexels_videos_2108274 (1080p).mp4"
+                  type="video/mp4"
+                />
+              </video>
+            </div>
+          </div>
+          <section class="sec-slide">
+            <div class="slide-intro">
+              <section
+                id="image-carousel"
+                class="splide"
+                aria-label="Beautiful Images"
+              >
+                <div class="splide__track">
+                  <ul class="splide__list">
+                    <li class="splide__slide">
+                      <img src="./images/comm/box_btn_img2.png" alt="" />
+                    </li>
+                    <li class="splide__slide">
+                      <img src="./images/comm/box_btn_img4.png" alt="" />
+                    </li>
+                    <li class="splide__slide">
+                      <img src="./images/comm/box_btn_img3.png" alt="" />
+                    </li>
+                  </ul>
+                </div>
+              </section>
+            </div>
+          </section>
+          <!-- <section id="sectionPin">
+            <span
+              >Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </span>
             <div class="pin-wrap">
               <div class="slide-box">
                 <img
@@ -227,9 +254,111 @@
                 </div>
               </div>
             </div>
+          </section> -->
+          <section class="sub-container">
+            <section class="brand">
+              <div class="left">
+                <div class="desc">
+                  <h2>ENHANCE YOUR LIFE</h2>
+                  <!-- <h3>엘리프는 개성과 취향을 추구하는 주거공간,<br>그 이상의 라이프 스타일을 추구합니다</h3> -->
+                  <h3>
+                    계룡건설의 브랜드 ELIF는 LIFE의 스펠링을 변형하여 <br />
+                    삶을 다르게 보고 일상을 새롭게 만들어 가는 주거 공간을
+                    표현했습니다.<br />
+                    <br />
+                    ELIF는 개성과 취향을 추구하는 주거 공간, <br />
+                    그 이상의 라이프 스타일을 추구합니다.
+                  </h3>
+                </div>
+              </div>
+              <div class="right">
+                <ul>
+                  <li>
+                    <div>
+                      <a href="#">
+                        <div class="area-txt">
+                          <span>브랜드 스토리</span>
+                          <span
+                            >당신의 일상에 새로움을 더하는<br />주거 공간의
+                            특별한 기준을 만들어갑니다.</span
+                          >
+                        </div>
+                        <div class="area-bg">
+                          <img
+                            src="./images/comm/brand_img0.png"
+                            alt="브랜드 스토리 바로가기 배경 이미지"
+                          />
+                        </div>
+                      </a>
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="#">
+                        <div class="area-txt">
+                          <span>브랜드 아이덴티티</span>
+                          <span
+                            >새로운 일상에 대한 자신감을 보여주며<br />품질에
+                            대한 엘리프의 정직한 고집을 표현합니다.</span
+                          >
+                        </div>
+                        <div class="area-bg">
+                          <img
+                            src="./images/comm/brand_img1.png"
+                            alt="브랜드 아이덴티티 바로가기 배경 이미지"
+                          />
+                        </div>
+                      </a>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="bg">
+                <div>
+                  <video width="1920" autoplay muted loop>
+                    <source
+                      src="./images/video/video (1080p).mp4"
+                      type="video/mp4"
+                    />
+                  </video>
+                  <!-- <img src="/resources/web/images/main-bg-cover.png" alt=""> -->
+                </div>
+              </div>
+            </section>
           </section>
-          <section>
-            <video src=""></video>
+          <section class="four-sec">
+            <div class="img-box">
+              <ul class="four-active">
+                <li>
+                  <a href="#"
+                    ><img src="./images/comm/m_sub_visual02.png" alt="" /><span
+                      >A/S 신청</span
+                    ></a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="./images/comm/m_sub_visual02.png" alt="" /><span
+                      >A/S 신청</span
+                    ></a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="./images/comm/brand_img3.png" alt="" /><span
+                      >A/S 신청</span
+                    ></a
+                  >
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="./images/comm/m_sub_visual02.png" alt="" /><span
+                      >A/S 신청</span
+                    ></a
+                  >
+                </li>
+              </ul>
+            </div>
           </section>
         </div>
       </main>
