--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css" />
     <link rel="stylesheet" href="./dist/css/comm.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script defer src="./dist/js/comm.js"></script>
   </head>
   <body>
@@ -74,99 +78,57 @@
           </video>
         </div>
       </div>
-      <main id="main" class="container">
-        <div class="inner">
-          <section
-            id="main-slider"
-            class="splide"
-            aria-label="Beautiful Images"
-          >
-            <div class="splide__track">
-              <ul class="splide__list">
-                <li class="splide__slide">
-                  <img
-                    src="https://images.unsplash.com/photo-1682685797769-481b48222adf?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
-                    alt=""
-                  />
+      <br><br>
+      <main id="main">
+        <section class="sec-calendar">
+            <div class="nav-wrap">
+              <!-- nav -->
+              <ul class="slider-nav">
+                <li>
+                  <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3270&q=80" alt="">
                 </li>
-                <li class="splide__slide">
-                  <img
-                    src="https://images.unsplash.com/photo-1682685797208-c741d58c2eff?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
-                    alt=""
-                  />
+                <li>
+                  <img src="https://images.unsplash.com/photo-1558211583-d26f610c1eb1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3412&q=80" alt="">
                 </li>
-                <li class="splide__slide">
-                  <img
-                    src="https://images.unsplash.com/photo-1682695794816-7b9da18ed470?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
-                    alt=""
-                  />
+                <li>
+                  <img src="https://images.unsplash.com/photo-1630581630833-27c2b470e9cc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3396&q=80" alt="">
                 </li>
               </ul>
             </div>
-          </section>
-          <section
-            id="thumbnail-slider"
-            class="splide"
-            aria-label="Beautiful Images"
-          >
-            <div class="splide__track">
-              <ul class="splide__list">
-                <li class="splide__slide">
-                  <img
-                    src="https://images.unsplash.com/photo-1682685797769-481b48222adf?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
-                    alt=""
-                  />
-                </li>
-                <li class="splide__slide">
-                  <img
-                    src="https://images.unsplash.com/photo-1682685797208-c741d58c2eff?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
-                    alt=""
-                  />
-                </li>
-                <li class="splide__slide">
-                  <img
-                    src="https://images.unsplash.com/photo-1682695794816-7b9da18ed470?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
-                    alt=""
-                  />
-                </li>
-              </ul>
+            <!-- slide -->
+            <div class="slider-for">
+              <div>
+                <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3270&q=80" alt="">
+              </div>
+              <div>
+                <img src="https://images.unsplash.com/photo-1558211583-d26f610c1eb1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3412&q=80" alt="">
+              </div>
+              <div>
+                <img src="https://images.unsplash.com/photo-1630581630833-27c2b470e9cc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3396&q=80" alt="">
+              </div>
             </div>
-          </section>
-          <script>
-            var main = new Splide("#main-slider", {
-              type: "fade",
-              heightRatio: 0.5,
-              pagination: false,
-              arrows: false,
-              cover: true,
-            });
+            
+        </section>
+        <script>
+          $('.slider-for').slick({
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            arrows: false,
+            fade: true,
+            asNavFor: '.slider-nav'
+          });
+          $('.slider-nav').slick({
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            asNavFor: '.slider-for',
+            dots: true,
+            centerMode: true,
+            centerPadding: '20px',
+            focusOnSelect: true
+          });
+        </script>
 
-            var thumbnails = new Splide("#thumbnail-slider", {
-              rewind: true,
-              fixedWidth: 104,
-              fixedHeight: 58,
-              isNavigation: true,
-              gap: 10,
-              focus: "center",
-              pagination: false,
-              cover: true,
-              dragMinThreshold: {
-                mouse: 4,
-                touch: 10,
-              },
-              breakpoints: {
-                640: {
-                  fixedWidth: 66,
-                  fixedHeight: 38,
-                },
-              },
-            });
 
-            main.sync(thumbnails);
-            main.mount();
-            thumbnails.mount();
-          </script>
-        </div>
         <section class="sec-slide">
           <div class="slide-intro">
             <section
