--- a/index.html
+++ b/index.html
@@ -48,11 +48,20 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css"
+    />
     <link rel="stylesheet" href="./dist/css/comm.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script defer src="./dist/js/comm.js"></script>
@@ -78,58 +87,74 @@
           </video>
         </div>
       </div>
-      <br><br>
+      <br /><br />
       <main id="main">
         <section class="sec-calendar">
-            <div class="nav-wrap">
-              <!-- nav -->
-              <ul class="slider-nav">
-                <li>
-                  <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3270&q=80" alt="">
-                </li>
-                <li>
-                  <img src="https://images.unsplash.com/photo-1558211583-d26f610c1eb1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3412&q=80" alt="">
-                </li>
-                <li>
-                  <img src="https://images.unsplash.com/photo-1630581630833-27c2b470e9cc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3396&q=80" alt="">
-                </li>
-              </ul>
+          <div class="nav-wrap">
+            <!-- nav -->
+            <ul class="slider-nav">
+              <li>
+                <img
+                  src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3270&q=80"
+                  alt=""
+                />
+              </li>
+              <li>
+                <img
+                  src="https://images.unsplash.com/photo-1558211583-d26f610c1eb1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3412&q=80"
+                  alt=""
+                />
+              </li>
+              <li>
+                <img
+                  src="https://images.unsplash.com/photo-1630581630833-27c2b470e9cc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3396&q=80"
+                  alt=""
+                />
+              </li>
+            </ul>
+          </div>
+          <!-- slide -->
+          <div class="slider-for">
+            <div>
+              <img
+                src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3270&q=80"
+                alt=""
+              />
             </div>
-            <!-- slide -->
-            <div class="slider-for">
-              <div>
-                <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3270&q=80" alt="">
-              </div>
-              <div>
-                <img src="https://images.unsplash.com/photo-1558211583-d26f610c1eb1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3412&q=80" alt="">
-              </div>
-              <div>
-                <img src="https://images.unsplash.com/photo-1630581630833-27c2b470e9cc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3396&q=80" alt="">
-              </div>
+            <div>
+              <img
+                src="https://images.unsplash.com/photo-1558211583-d26f610c1eb1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3412&q=80"
+                alt=""
+              />
             </div>
-            
+            <div>
+              <img
+                src="https://images.unsplash.com/photo-1630581630833-27c2b470e9cc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3396&q=80"
+                alt=""
+              />
+            </div>
+          </div>
         </section>
         <script>
-          $('.slider-for').slick({
+          $(".slider-for").slick({
             slidesToShow: 1,
             slidesToScroll: 1,
             arrows: false,
             fade: true,
-            asNavFor: '.slider-nav'
+            asNavFor: ".slider-nav",
           });
-          $('.slider-nav').slick({
+          $(".slider-nav").slick({
             slidesToShow: 1,
             slidesToScroll: 1,
-            asNavFor: '.slider-for',
+            asNavFor: ".slider-for",
             dots: true,
             centerMode: true,
-            centerPadding: '20px',
-            focusOnSelect: true
+            centerPadding: "20px",
+            focusOnSelect: true,
           });
         </script>
 
-
-        <section class="sec-slide">
+        <!-- <section class="sec-slide">
           <div class="slide-intro">
             <section
               id="image-carousel"
@@ -151,7 +176,7 @@
               </div>
             </section>
           </div>
-        </section>
+        </section> -->
         <!-- <section id="sectionPin">
             <span
               >Lorem ipsum dolor sit amet consectetur adipisicing elit.
