--- a/news.html
+++ b/news.html
@@ -64,6 +64,9 @@
       <a href="#main"><span>컨텐츠 바로가기</span></a>
     </div>
     <div class="wrap">
+      <header id="header">
+        <div class="inner">header</div>
+      </header>
       logo 왼쪽 type
       <!-- <header id="header" class="container">
         <div class="inner">
@@ -640,60 +643,36 @@
                               </ul>
                             </a>
                           </div>
-                          <div class="grid gu_link_hover">
+                        </div>
+                      </div>
+                      <div class="page-num">
+                        <div class="sub_content">
+                          <div class="paging">
+                            <strong>1</strong>
                             <a
-                              href="./view.do?pSeq=1591&amp;magSeq=666&amp;"
-                              title="거울과 빛으로 영속되는 해방의 공간 자세히 보기"
+                              href="news_list.php?page=1&amp;key=&amp;search=&amp;page=2"
+                              >2</a
                             >
-                              <div class="gu_img_area">
-                                <div class="gu_img_box">
-                                  <img
-                                    src="./images/comm/분양단지/5.png"
-                                    alt="거울과 빛으로 영속되는 해방의 공간"
-                                  />
-                                </div>
-                              </div>
-                              <ul>
-                                <li class="type en_gill_200 f_color_9">
-                                  <span> Culture </span>
-                                </li>
-                                <li class="title upper">
-                                  거울과 빛으로 영속되는 해방의 공간
-                                </li>
-                                <li class="desc">
-                                  이반 나바로의 네온이 밝히는 눈부신 빛은 최초로
-                                  인류의 밤을 밝힌 전구처럼 어둠으로부터의
-                                  자유와 희망, 해방을 향한 열망으로 가득 차
-                                  있다.
-                                </li>
-                              </ul>
-                            </a>
-                          </div>
-                          <div class="grid gu_link_hover">
                             <a
-                              href="./view.do?pSeq=1596&amp;magSeq=666&amp;"
-                              title="WHATWELOVE 자세히 보기"
+                              href="news_list.php?page=1&amp;key=&amp;search=&amp;page=3"
+                              >3</a
                             >
-                              <div class="gu_img_area">
-                                <div class="gu_img_box">
-                                  <img
-                                    src="./images/comm/분양단지/9.png"
-                                    alt="WHATWELOVE"
-                                  />
-                                </div>
-                              </div>
-                              <ul>
-                                <li class="type en_gill_200 f_color_9">
-                                  <span> Fashion </span> <span> Beauty </span>
-                                </li>
-                                <li class="title upper">WHATWELOVE</li>
-                                <li class="desc">
-                                  글로벌 럭셔리 브랜드부터 가장 핫한 신상품까지,
-                                  당신의 라이프스타일에 품격을 더해줄 7·8월의
-                                  리스트.
-                                </li>
-                              </ul>
-                            </a>
+                            <a
+                              href="news_list.php?page=1&amp;key=&amp;search=&amp;page=4"
+                              >4</a
+                            >
+                            <a
+                              href="news_list.php?page=1&amp;key=&amp;search=&amp;page=5"
+                              >5</a
+                            >
+                            <a
+                              href="news_list.php?page=1&amp;key=&amp;search=&amp;page=6"
+                              >6</a
+                            >
+                            <a
+                              href="news_list.php?page=1&amp;key=&amp;search=&amp;page=7"
+                              >7</a
+                            >
                           </div>
                         </div>
                       </div>
